--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+
+/* #region CSS Principal */
+
 body {
     background-color: #5d4e64;
     font-family: Arial, sans-serif;
@@ -20,8 +23,7 @@ body {
     width: 72%;
 }
 
-h1,
-h2 {
+h1, h2 {
     margin-bottom: 16px;
     color: #5d4e64;
 }
@@ -66,8 +68,7 @@ h2 {
     opacity: 0.7;
 }
 
-#result,
-#score {
+#result, #score {
     min-height: 40px;
     /* margin-bottom: 20px; */
 }
@@ -98,6 +99,8 @@ h2 {
     font-weight: bold;
     margin-top: 8px;
 }
+
+/* #endregion */
 
 /* #region Animação dos Botões */
 
